Add media query for small screens

--- a/playground/src/index.css
+++ b/playground/src/index.css
@@ -30,6 +30,12 @@
     z-index: 100;
 }
 
+@media only screen and (max-width: 1080px) {
+    #code {
+        display: none;
+    }
+}
+
 .header {
     box-shadow: 0 8px 20px 0 rgba(0,0,0,.2)
 }
