Improve error experience

--- a/playground/src/index.css
+++ b/playground/src/index.css
@@ -49,7 +49,7 @@ html, body {
     top: 0;
     left: 0;
     right: 0;
-    bottom: 0;
+    height: 200px;
     pointer-events: none;
     z-index:999;
     background-color: red;
